# gossamer

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: GossDetectDependencies.cmake  GossDetectPlatform.cmake  GossPandoc.cmake
docs/: CHANGES.txt  CMakeLists.txt  README.txt  electus.md  gossamerManpage.txt  gossman.1  gossple.md  license.txt  makeDocs.sh  release.txt  xenomeManpage.txt  xenomeREADME.txt
docs/example/: build.sh  reference.fa
papers/ISMB-2012-poster/: abstract.tex  poster.bib  poster.tex
papers/espresso-2012/: Makefile  count.py  genreads.py  paper.bib  paper.tex  pict-matrix.tex
papers/espresso-2012/data/: kmer-uniqueness.txt  kmers.py  score.py  staph-kmer-frequencies.txt
papers/pacbio-2013/: paper.tex
papers/pool-2012/: paper.tex
papers/super-2011/: paper.bbl  paper.bib  paper.tex  response.tex
papers/super-2011/scripts/: Bombus_impatiens.sh  Hg_chr14.sh  Rhodobacter_sphaeroides.sh  Staphylococcus_aureus.sh
papers/tech-2011/: paper.aux  paper.bib  paper.blg  paper.tex
papers/trans-2012/: Makefile  paper.bib  paper.tex  pict-bubbles.tex  pict-contigs.tex  pict-spectral.tex  pict-tips.tex  pict-welding.tex
papers/vis-2012/: Makefile  graph-k3.dot  paper.bib  paper.tex
papers/xeno-2011/: compileResults.r  experiments.tex  mkBarPlot.r  paper.aux  paper.bbl  paper.bib  paper.blg  paper.tex  response.tex
script/: gossple.bat  gossple.ps1  gossple.sh
src/: AnnotTree.cc  AnnotTree.hh  App.cc  App.hh  ArrayMap.hh  AsyncMerge.cc  AsyncMerge.hh  AsyncMerge.tcc  Atomic.hh  BackgroundBlockConsumer.hh  BackgroundBlockProducer.hh  BackgroundConsumer.hh  BackgroundMultiConsumer.hh  BackgroundProducer.hh  BackgroundSafeBlockConsumer.hh  BackyardHash.cc  BackyardHash.hh  BigInteger.cc  BigInteger.hh  BitVecSet.hh  BlendedSort.hh  BoundedQueue.hh  BzipFilter.cc  BzipFilter.hh  CMakeLists.txt  CompactDynamicBitVector.cc  CompactDynamicBitVector.hh  Debug.cc  Debug.hh  DebugAllocator.hh  DeltaCodec.hh  DenseArray.cc  DenseArray.hh  Deque.hh  EdgeAndCount.hh  EdgeCompiler.hh  EdgeIndex.cc  EdgeIndex.hh  ElectApp.cc  ElectApp.hh  (+325 more)
tests/169_supergraphOfBowtie/: doIt.sh  in.fa  inr.fa  readme.txt
tests/169_supergraphOfBowtieAllPaths/: doIt.sh  in.fa  inr.fa
tests/170_pairs/: doIt.sh  in.fa  p_1.fa  p_2.fa
utils/: alignScaffolds.py  doTranslucent.sh  plotContigCumSum.R  transple.sh
utils/expander/cytoscape/gendb/: Makefile  gendb.cc
utils/expander/cytoscape/plugin/: build.xml  plugin.props
utils/expander/cytoscape/plugin/src/cytoscape/expand/: Expand.java
utils/expander/web/gendb/: Makefile  addPsl.py  blatDb.py  gendb.cc
utils/expander/web/server/: Makefile  Server.hs
utils/expander/web/viewer/: expander.html
utils/expander/web/viewer/css/: standard.css
utils/experimentalHarness/: analyseGossamerLog.pl  calculateN50.pl  contigLengths.pl  evaluateExperimentWithBWA.sh  evaluateExperimentWithExonerate.sh  filterShortContigs.pl  matchAlignments.pl  runExperimentWithGoss.sh  runExperimentWithSoap.sh  runExperimentWithVelvet.sh  splitAtN.pl  sum.pl
windows/: gossamer_windows.sln
windows/goss/: goss.vcxproj
windows/gossamer/: gossamer.vcxproj
windows/gossapp/: gossapp.vcxproj
windows/gossple/: gossple.vcxproj
windows/testall/: testall.vcxproj
windows/testall/src/: testAll.cc
windows/xenome/: xenome.vcxproj
windows/xenomeapp/: xenomeapp.vcxproj
